#
# some news ... see also TODO for hints
#


2017-09-18 -> some smaller improvements in flying_astronaut and input_control
	   -> some smaller documentation updates

2017-09-17 -> add skeleton for menu program which should start all demos
	   -> add function init_game_object_from_file_simple() which uses the
	      texture info for with/height
	   -> add file object_fab.c to libgame (game object fab based on a
	      configuration file)

2017-09-15 -> remove accel related stuff
	   -> finalize flying_astronaut example

2017-09-13 -> add some functions to handle mouse related topics
	   -> finalize follow_mouse example
	   -> add some more documentation
	   -> add some functions in different areas
	   -> add skeleton and first steps of flying_astronaut "ball" demo
	   -> go back to int for vector2d_t and update examples

2017-09-12 -> add keyboard handling in input_control
	   -> add some more documenation and links around SDL

2017-09-11 -> add fullscreen kdo arg to hello_sdl
	   -> fix wrong usage of accel and velo in input_control example
	   -> add init_game_object_simple() wich uses SDL_QueryTexture to get
	      the size of the texture
	   -> add skeleton for follow_mouse click example
	   -> add some more event "handler" in input_control

2017-09-10 -> fix joystick -> let both (i have only two) control the astronaut

2017-09-09 -> add control of the astronaut via joystick

2017-09-08 -> fix joystick initialisation

2017-09-07 -> set correct size of screen and image for input_control example
	      (the first example which should run on the tv)
	   -> add first input parts for the joystick

2017-09-06 -> change pos_t of game_obj_t from int to float
	   -> add velocity and acceleration to game_obj_t
	   -> add some common operations on vector_2d_t
	   -> add some functions to set pos of game_obj_t
	   -> add skeleton input_control (joystick/mouse/keyboard control of an object)

2017-09-05 -> remove lib_example (use_game_obj_t is a better example)