@@ -41,12 +41,12 @@
  * draw a texture
  */
 LIGGAME_LOCAL void
-draw_texture(game_obj_t *obj, SDL_Renderer *renderer);
+draw_texture(game_obj_data_t *obj, SDL_Renderer *renderer);
 
 /*
  * draw a frame (sprite sheet)
  */
 LIGGAME_LOCAL void
-draw_frame_texture(game_obj_t *obj, SDL_Renderer *renderer);
+draw_frame_texture(game_obj_data_t *obj, SDL_Renderer *renderer);
 
 #endif
